POR/RefEdge/src/objects/Invitation_ReferenceContent__c.object
<CustomObject>
    <description>Content Sharing (Bound 4)</description>
    <fields>
        <fullName>First_Visit__c</fullName>
        <label>First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invitation__c</fullName>
        <label>Invitation</label>
        <referenceTo>Invitation__c</referenceTo>
        <relationshipName>Invitation_ReferenceContents</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <formula>IF(Recipient__r.Contact__c == null  ,  IF(Recipient__r.User__c == null  ,Recipient__r.Other_Recipient__c,Recipient__r.User__r.FirstName &amp; &quot; &quot; &amp;Recipient__r.User__r.LastName), Recipient__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Recipient__r.Contact__r.LastName)</formula>
        <label>Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Invitee__c</referenceTo>
        <relationshipLabel>Invitation Content</relationshipLabel>
        <relationshipName>Invitation_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Content__c</fullName>
        <label>Reference Content</label>
        <referenceTo>Reference_Content__c</referenceTo>
        <relationshipName>Invitation_ReferenceContents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visits_clicks__c</fullName>
        <label>Visits (clicks)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invitation Content</label>
    <nameField>
        <displayFormat>IRC-{00000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitation Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>